--- a/projects/ml.html
+++ b/projects/ml.html
@@ -43,17 +43,17 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">ML-DL web app</h2>
+            <h2 style="color:#12d640">Vehicle Loan Web Application</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Flask, Python, Heroku, SQlite, HTML, CSS</li>
-                <li><strong>Website URL</strong>: <a href="https://ml-dl-webapp.herokuapp.com/" target="_blank">Link</a></li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ML_DL_WebApp" target="_blank">Project Link</a></li>
+              <li><strong>Tech Stack</strong>: Java, SpringBoot, Hibernate, Angular, Maven</li>
+              <li><strong>Github URL</strong>: <a href="https://github.com/priyankabgda111/VehicleLoan_grp8" target="_blank">Project Link</a></li>
             </ul>
 
-            <p>
-              The web app created for showcasing machine learning and deep learning projects. The app consists of the flask as backend and bootstrap for the frontend part. The projects include text summarizer, image classifier and iris classifier.            
-            </p>
+            <p>The vehicle loan application facilitates seamless loan processing, leveraging Java, SpringBoot, Hibernate, and Angular technologies for robust backend and intuitive frontend functionalities. </p>
+            <p>It includes features such as user-friendly interface for loan application submission, real-time status updates, integration with credit scoring systems, and secure document uploads. </p>
+            <p>Additionally, the application ensures compliance with regulatory requirements and provides thorough validation checks for accurate loan processing.
+               </p>
           </div>
 
         </div>
