--- a/projects/resume.html
+++ b/projects/resume.html
@@ -43,15 +43,20 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Resume Section Classifier</h2>
+            <h2 style="color:#12d640">ML driven Women Safety Android Application</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Python, scikit-learn, numpy, pandas</li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ResumeSectionClassifier" target="_blank">Project Link</a></li>
+              <li><strong>Tech Stack</strong>: Android Studio, RNN, MLR, SVM, Speech emotion recognition, GSM, GPS modules</li>
+              <!-- <li><strong>Github URL</strong>: <a href="" target="_blank">Project Link</a></li> -->
             </ul>
 
             <p>
-              Given the Resume of a person, detect the section words such as experience, skills, projects, etc. Implemented different machine learning algorithms to get the desired output.            
+              Led a team to develop a Women Safety App driven by machine learning, integrating advanced modules including real-time emotion detection from speech and GPS/GSM tracking. This application aims to enhance personal security and provide prompt alerts to authorities or designated contacts during distress situations.         
+            
+            </p>
+            <p>It uses a Machine Learning algorithm , which listens to user always, judge the emotional state . If the emotion is something like fear, it notifies police , prime contacts and nearby users.
+            </p>
+            <p>It also notifies nearby users of the app also , where there can be more chances of getting help from them in those emergency situations.
             </p>
           </div>
 
