--- a/projects/vdg.html
+++ b/projects/vdg.html
@@ -43,15 +43,19 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Video Description Generator</h2>
+            <h2 style="color:#12d640">Pneumonia Detection Using 
+              Chest X-rays and Symptoms</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Tensorflow, NLTK, Keras, Python, Opencv</li>
+              <li><strong>Tech Stack</strong>: Python, Tensorflow, OpenCV, KPac, Jupyter notebook</li>
             </ul>
 
             <p>
-              Project aims at generating a description of a given video. The steps include Object detection in video frames using Convolutional Neural Network followed by generating text for each frame using a recurrent neural network and thereby generating tags with the help of natural language processing.            
-            </p>
+             Developed a model that can automatically detect pneumonia with the help of Chest X-rays and Doctor’s note(symptoms).</p>
+             <p>Used CNN model with five convolutional blocks for Chest x-ray images and <br>
+            Logistic Regression model to classify based on provided symptoms.</p>
+            <p>We have worked on the real-time dataset, with the assistance of few radiologists.  So, we trust that this innovation can make strides in healthcare conveyance in parts of the world where to get talented radiologists is restricted. </p>
+
           </div>
 
         </div>
