--- a/projects/blog.html
+++ b/projects/blog.html
@@ -43,20 +43,15 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Tech Blog</h2>
+            <h2 style="color:#12d640">Augmented Reality Car Catalog (3D Catalog)</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Flask, SQLAlchemy, Python, Heroku, Postgres, Bootstrap, HTML, CSS</li>
-                <li><strong>Website URL</strong>: <a href="https://techingenious.herokuapp.com/" target="_blank">Link</a></li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/Blog_with_flask" target="_blank">Project Link</a></li>
-            </ul>
+              <li><strong>Tech Stack</strong>: Unity, Java, Python, XML, Augmented Reality</li>
+                </ul>
 
             <p>
-               The blog is created using flask as backend. I have used bootstrap for the frontend part. For storing the data, I have made use of MySQL database. I have used the python SQL toolkit SQLAlchemy for performing database access.
-            </p>
-              <p>
-                The blog consist of features like viewing posts. Admin can add new post, edit posts and delete posts. User can contact admin via the contact page.
-            </p>
+              Developed a groundbreaking "3D Catalog" app utilizing Augmented Reality (AR) technology and Unity 3D, offering customers an unparalleled experience. </p>
+            <p>  Through image scanning within the catalog, users can delve into immersive, lifelike 3D representations of various car models, providing a dynamic and interactive way to explore their features and designs. </p>
           </div>
 
         </div>
