--- a/projects/musicplayer.html
+++ b/projects/musicplayer.html
@@ -43,19 +43,16 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Music Streaming Website</h2>
+              <h2 style="color:#12d640">Digital FIR Web Application</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Django, HTML, CSS, Bootstrap, AWS S3, Heroku</li>
-                <li><strong>Website URL</strong>: <a href="https://galvanic-music.herokuapp.com/" target="_blank">Link</a></li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/MusicPlayer" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: HTML, CSS, Bootstrap, Angular, NodeJS, ExpressJS, MongoDB</li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/priyankabgda111/Digital-FIR" target="_blank">Project Link</a></li>
               </ul>
   
+             <br>
               <p>
-                Django based music streaming website.             
-              </p>
-              <p>
-                User can register/login to the web app, play song, view detailed information of song, search song based on filters such as language and singers, create playlist, add/remove songs to/from playlist, add/remove songs to/from favourites, explore recently played songs.              
-              </p>
+                A user-friendly Digital FIR platform enabling seamless online filing of FIRs, enhancing user identity
+                verification through Aadhaar OTP, and efficient collection of incident details and suspect information.  </p>
             </div>
   
           </div>
