--- a/index.html
+++ b/index.html
@@ -300,29 +300,39 @@
       </div>
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
-              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">L&T Infotech</a><br> </h4>
-                <h5 style="text-align:left;">January 2022 - December 2022</h5>
-                <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
+             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://jghpi.com/" style="color:#12d640">Joe Gibbs Human Performance Institute, Charlotte, NC</a><br> </h4>
+                <h5 style="text-align:left;">September 2024 - Present</h5>
+                <p style="text-align:left;color:#fff"><em>Software Development Intern</em></p>
                 <ul style="text-align:left;">
-                  <li>Played a key role in the development and
-                       enhancement of a Bank's KYC application, focusing on the Periodic Review and Client Refresh Module.</li>
-                  <li>Collaborated with cross-functional teams to ensure seamless data management, robust backend functionality, and efficient
-                    RESTful communication.</li>
-                  <li>Utilized expertise in Hibernate, Spring Boot, Spring MVC, and Restful Web Services to streamline data management processes</li>
+                  <li>Contributed to the migration of critical data systems to AWS, utilizing S3 Buckets for data storage, Event Bridge for event classification and routing, Lambda for automated data processing, and CloudFormation for infrastructure management.</li>
+                  <li>Assisted in building advanced data acquisition and analysis systems to optimize human performance. </li>
+                  <li>Integrated the Kinexon API for user mapping and tracking in the AWS cloud migration, processing data by calling GET requests and automating the loading, cleaning, and storage of data into AWS DynamoDB, resulting in a 30% increase in efficiency.</li>
+                </ul>
+              </div>
+             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://freightgate.net/" style="color:#12d640">Freightgate, Fountain valley, CA</a><br> </h4>
+                <h5 style="text-align:left;">May 2024 - August 2024</h5>
+                <p style="text-align:left;color:#fff"><em>Programming Intern</em></p>
+                <ul style="text-align:left;">
+                  <li>Enhanced a Maintenance tools web application by leveraging strong problem-solving skills to integrate two new UI components into the report dashboard, increasing report filtering efficiency by 20% based on specified criteria</li>
+                  <li>Developed an Alexa skill using Node.js as the backend, which triggers based on specific conditions in an AWS Lambda function and sends email alerts to users, resulting in a 40% increase in user engagement and a 25% reduction in response time.</li>
+                  <li>Deployed, and tested the optimized maintenance tools web application using Docker, ensuring improved functionality and consistent performance across multiple environments.</li>
+                </ul>
+              </div>
+              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://www.ltimindtree.com/" style="color:#12d640">LTI Mindtree, Hyderabad, India</a><br> </h4>
+                <h5 style="text-align:left;">August 2021 - December 2022</h5>
+                <p style="text-align:left;color:#fff"><em>Senior Software Engineer </em></p>
+                <ul style="text-align:left;">
+                  <li>Engineered Citi bank’s web application following the SDLC with Java Spring Boot, Hibernate as backend, 
+                    Oracle as relational database, Angular for front-end integrating test-driven development under Agile methodology to manage its KYC application.</li>
+                  <li>Optimized the Periodic Review and Client Refresh module of the Citi KYC application, leveraging distributed systems expertise to achieve significant efficiency gains, resulting in a 30% improvement in processing efficiency.</li>
+                  <li>Revamped web application UI with HTML, CSS, JavaScript, and Angular; securely integrated with backend systems, improving user interface response time by 15%.</li>
                   <li>Successfully debugged dozens of software assurance risks and APIs, leveraging strong communication, interpersonal, and problem-solving skills</li>
                 </ul>
               </div>
-              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">L&T Infotech</a><br> </h4>
-                <h5 style="text-align:left;">August 2021 - December 2021</h5>
-                <p style="text-align:left;color:#fff"><em>Graduate Engineer Trainee</em></p>
-                <ul style="text-align:left;">
-                  <li>completed an intensive Java Full Stack development training program.</li>
-                  <li>Developed and deployed a comprehensive 'vehicle loan application' with Angular frontend and Spring Boot backend</li>
-                  <li>Enhanced user experience by implementing interactive features</li>
-                </ul>
-              </div>
+          
              
           </div>
         </div>
