--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
 
       <h1><a href="index.html">Priyanka Boguda</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff">I'm a <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -301,29 +301,28 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://jghpi.com/" style="color:#12d640">Joe Gibbs Human Performance Institute, Charlotte, NC</a><br> </h4>
-                <h5 style="text-align:left;">September 2024 - Present</h5>
-                <p style="text-align:left;color:#fff"><em>Software Development Intern</em></p>
+                <h4 style="text-align:left;" style="color:#12d640">Software Development Intern<br> </h4>
+                <h3 style="text-align:left;"><a href="https://jghpi.com/">Joe Gibbs Human Performance Institute, Charlotte, NC</a><br> </h3>
+                <p style="text-align:left;color:#fff"><em>September 2024 - Present</em></p>
                 <ul style="text-align:left;">
                   <li>Contributed to the migration of critical data systems to AWS, utilizing S3 Buckets for data storage, Event Bridge for event classification and routing, Lambda for automated data processing, and CloudFormation for infrastructure management.</li>
                   <li>Assisted in building advanced data acquisition and analysis systems to optimize human performance. </li>
-                  <li>Integrated the Kinexon API for user mapping and tracking in the AWS cloud migration, processing data by calling GET requests and automating the loading, cleaning, and storage of data into AWS DynamoDB, resulting in a 30% increase in efficiency.</li>
                 </ul>
               </div>
              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://freightgate.net/" style="color:#12d640">Freightgate, Fountain valley, CA</a><br> </h4>
-                <h5 style="text-align:left;">May 2024 - August 2024</h5>
-                <p style="text-align:left;color:#fff"><em>Programming Intern</em></p>
+               <h4 style="text-align:left;">Programming Intern</h4>
+                <h3 style="text-align:left;"><a href="https://freightgate.net/" style="color:#12d640">Freightgate, Fountain valley, CA</a><br> </h3>
+                <p style="text-align:left;color:#fff"><em>May 2024 - August 2024</em></p>
                 <ul style="text-align:left;">
                   <li>Enhanced a Maintenance tools web application by leveraging strong problem-solving skills to integrate two new UI components into the report dashboard, increasing report filtering efficiency by 20% based on specified criteria</li>
                   <li>Developed an Alexa skill using Node.js as the backend, which triggers based on specific conditions in an AWS Lambda function and sends email alerts to users, resulting in a 40% increase in user engagement and a 25% reduction in response time.</li>
-                  <li>Deployed, and tested the optimized maintenance tools web application using Docker, ensuring improved functionality and consistent performance across multiple environments.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.ltimindtree.com/" style="color:#12d640">LTI Mindtree, Hyderabad, India</a><br> </h4>
-                <h5 style="text-align:left;">August 2021 - December 2022</h5>
-                <p style="text-align:left;color:#fff"><em>Senior Software Engineer </em></p>
+                <h4 style="text-align:left;">Senior Software Engineer </h4>
+                <h3 style="text-align:left;"><a href="https://www.ltimindtree.com/" style="color:#12d640">LTI Mindtree, Hyderabad, India</a><br> </h3>
+                
+                <p style="text-align:left;color:#fff"><em>August 2021 - December 2022</em></p>
                 <ul style="text-align:left;">
                   <li>Engineered Citi bank’s web application following the SDLC with Java Spring Boot, Hibernate as backend, 
                     Oracle as relational database, Angular for front-end integrating test-driven development under Agile methodology to manage its KYC application.</li>
