--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                 </ul>
               </div>
              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-               <h4 style="text-align:left;">Programming Intern</h4>
-                <h3 style="text-align:left;"><a href="https://freightgate.net/" style="color:#12d640">Freightgate, Fountain valley, CA</a><br> </h3>
+               <h4 style="text-align:left;"  style="color:#12d640">Programming Intern</h4>
+                <h3 style="text-align:left;"><a href="https://freightgate.net/">Freightgate, Fountain valley, CA</a><br> </h3>
                 <p style="text-align:left;color:#fff"><em>May 2024 - August 2024</em></p>
                 <ul style="text-align:left;">
                   <li>Enhanced a Maintenance tools web application by leveraging strong problem-solving skills to integrate two new UI components into the report dashboard, increasing report filtering efficiency by 20% based on specified criteria</li>
@@ -319,7 +319,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;">Senior Software Engineer </h4>
+                <h4 style="text-align:left;"  style="color:#12d640">Senior Software Engineer </h4>
                 <h3 style="text-align:left;"><a href="https://www.ltimindtree.com/" style="color:#12d640">LTI Mindtree, Hyderabad, India</a><br> </h3>
                 
                 <p style="text-align:left;color:#fff"><em>August 2021 - December 2022</em></p>
